recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: identifier expected but ')' found.
    forward(100.)
                ^FourSquare:5: error: identifier expected but ')' found.
    forward(100.)
                ^FourSquare:7: error: identifier expected but ')' found.
    forward(100.)
                ^FourSquare:9: error: identifier expected but ')' found.
    forward(100.)
                ^FourSquare:15: error: identifier expected but ')' found.
  forward(100.)
              ^FourSquare:20: error: identifier expected but ')' found.
  forward(100.)
              ^FourSquare:23: error: identifier expected but ')' found.
  forward(100.)
              ^FourSquare:26: error: identifier expected but ')' found.
  forward(100.)
              ^